--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zhixuan Guo"
   avatar           : "profile_ZGUO.png"
   bio              : "MPhil Student at HKUST(GZ)"
-  location         : "Location"
+  location         :  #"Location"
   employer         :
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  #"http://yourfullgooglescholarurl.com"
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/guozhixuan/"
+  github           : "guozhixuan"
   google_plus      :
   keybase          :
   instagram        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/ZhixuanGuo"
+  twitter          : "ZhixuanGuo"
   vine             :
   weibo            :
   xing             :
