--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /cv/
+    url: /assets/CV_ZXGUO.pdf
  
   - title: "Contact"
-    url: /cv/
+    url: /contact/
