--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
-  - title: "About me"
-    url: /_pages/about.md
+  - title: "Current Research"
+    url: /publication/
+
+  - title: "Teaching"
+    url: /teaching/
     
   - title: "CV"
     url: /assets/CV_ZXGUO.pdf
