--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /guide/
 
   - title: "Teaching"
-    url: /guide/
+    url: /teaching/
     
   - title: "CV"
     url: /assets/CV_ZXGUO.pdf
