--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: About Me
     url: /
 
-  - title: "Current Research"
-    url: /current-research/
+  - title: "Research"
+    url: /research/
 
   - title: "Teaching"
     url: /teaching/
