--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,12 @@
-# main links links
-main:
-  - title: About Me
-    url: /
+# main:
+#   - title: About Me
+#     url: /
 
-  - title: "Research"
-    url: /research/
+#   - title: "Research"
+#     url: /research/
 
-  - title: "Teaching"
-    url: /teaching/
+#   - title: "Teaching"
+#     url: /teaching/
     
-  - title: "CV"
-    url: /assets/CV_ZXGUO.pdf
+#   - title: "CV"
+#     url: /assets/CV_ZXGUO.pdf
